# ctf-2024

./: .gdb_history  .gitattributes  README.md  run.sh
0ops/IPManagementSystem/: .gdb_history  build.py  exp.c  exp.py.bak  exp.py.x  hook.py  libc.so.6.i64.7z  pwn.c  pwn.i64  pwn_patched  run.py  solve.c  solve.py
0ops/secureweb/patched/web/: Cargo.toml  Dockerfile  config.yaml  flag
0ops/secureweb/patched/web/src/: api.rs  entity.rs  main.rs  request.rs
ASCIS/: .gdb_history  chall.i64  hehe.py  x.py
ASCIS/exported_object/: Mmbl5-d4RnL081ZhxmZ  Mmbl5-d4RnL181ZhxmZ  Mmbl5-d4RnL281ZhxmZ  Mmbl5-d4RnL381ZhxmZ  Mmbl5-d4RnL481ZhxmZ  Mmbl5-d4RnL581ZhxmZ  Mmbl5-d4RnLx81ZhxmZ  Mmbl5-d4RnLy81ZhxmZ  Mmbl5-d4RnLz81ZhxmZ  Mmbl5yZuBnLtlWb  Mmbl5yZwpmL2UDN3kDMx0SbhR3ct4WYhlGdzFmYlNXLzxWZ4VGc  data  j5WZuQHe05-M081ZhxmZ  j5WZuQHe05-M181ZhxmZ  j5WZuQHe05-Mx81ZhxmZ  j5WZuQHe05-My81ZhxmZ  j5WZuQHe05-Mz81ZhxmZ  j5WZuQHe05-N081ZhxmZ  j5WZuQHe05-N181ZhxmZ  j5WZuQHe05-Nx81ZhxmZ  j5WZuQHe05-Ny81ZhxmZ  j5WZuQHe05-Nz81ZhxmZ  j5WZuQHe05-O081ZhxmZ  j5WZuQHe05-O181ZhxmZ  j5WZuQHe05-Ox81ZhxmZ  j5WZuQHe05-Oy81ZhxmZ  j5WZuQHe05-Oz81ZhxmZ  j5WZuQHe05SM081ZhxmZ  j5WZuQHe05SM181ZhxmZ  j5WZuQHe05SMx81ZhxmZ  j5WZuQHe05SMy81ZhxmZ  j5WZuQHe05SMz81ZhxmZ  j5WZuQHe05SN081ZhxmZ  j5WZuQHe05SN181ZhxmZ  j5WZuQHe05SNx81ZhxmZ  j5WZuQHe05SNy81ZhxmZ  j5WZuQHe05SNz81ZhxmZ  j5WZuQHe05SO081ZhxmZ  j5WZuQHe05SO181ZhxmZ  j5WZuQHe05SOx81ZhxmZ  (+32 more)
BW/SBox/: x  (+8 more)
Sekai/: life_simulator_2.7z
csc/: x.py
ddctf/: exp.py
mynas/: .gdb_history  client  core.118717  core.119600  core.142153  core.162833  flag.txt  server  x.py
(+537 files in other folders)
