[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
actix-web-validator = "6.0"
anyhow = "1.0"
env_logger = "0.11"
dashmap = "6.1"
rand = "0.8"
regex = "1.11"
uuid = { version = "1.11", features = ["v4", "macro-diagnostics", "fast-rng"] }
rhai = "1.20"
